@@ -19,5 +19,5 @@ DIST VMware-Player-2.5.0-118166.x86_64.bundle 63035915 RMD160 a29b3c45e5bca07ef8
 DIST VMware-player-1.0.9-126128.tar.gz 38963760 RMD160 ed54df1e097894f11b7bbce8215d1f314df03217 SHA1 701ca338ec52dcb60db26908de8e0b5bfd981fb7 SHA256 3fae981892437ec1804a2171b701ca33000405fbd799fb06112fd70c939d8d75
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-player-1.0.9.126128.ebuild 2651 RMD160 36054a17ee5ec4bc8b35e84cb7f6207703aebdb1 SHA1 cd4cdc99d5c8499ae9ad1873184c835fac7b3a16 SHA256 c2d09869ac8cbef5ca019f864754e90162196707fbc9684c268ef5fbd6b37442
-EBUILD vmware-player-2.5.0.118166.ebuild 5138 RMD160 0b1bc6d01d4e9081cc2adbde04fd04ef2a7bfdca SHA1 d36303208d0586b60cc5cc7369de6f34d6041518 SHA256 3c5d6ad3707704dfea6dbf40c5e804e5a2dce707db2958361efb7c959a45a07e
+EBUILD vmware-player-2.5.0.118166.ebuild 5412 RMD160 379347f7fe92b603411732f4d44b7009d8e7a71b SHA1 b666b04e9347e2f76c4788a1435abd95e536304b SHA256 f3ffc2d5ecad69ae751af1dc5d8201ddc53cd3cdba16fd9c9545fc9c41337c05
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
