@@ -23,4 +23,4 @@ DIST VMware-Workstation-6.5.0-118166.x86_64.bundle 366776834 RMD160 02d4e984a827
 DIST VMware-workstation-5.5.9-126128.tar.gz 111649803 RMD160 a5a867761d36c9a02821f8dd639a95b8c9ab38bc SHA1 eb8786111a74213ea4ec24636a4ba70b7f5dc741 SHA256 71a062e29480a48647c7323883e4e4b43a9365c1bb70000a23b768647db46444
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.9.126128.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
-EBUILD vmware-workstation-6.5.0.118166.ebuild 5150 RMD160 7ff76a090fae9cc7ec4271d0135b11eed22f778f SHA1 459d0b9e6a6a4bc5d48ed164acae6d6d22e7bc7e SHA256 9ccfc72a5ba17a9da0271231cd533c383a54b3d720e12793ed1e6fb6d62366d8
+EBUILD vmware-workstation-6.5.0.118166.ebuild 5430 RMD160 2d80b354401d73fec36e0fa0b50d929eeb5c17fa SHA1 aec806df5d69b789f09bd4514819fb0b1ed40833 SHA256 c7e0ffa6b63b4512ee0ac8687db9a56304f134f1315c6650ffc5d9ffaab93a9d
